force-app/main/default/objects/PricebookEntry/fields/CostCalc__c.field-meta.xml
<CustomField>
    <fullName>CostCalc__c</fullName>
    <formula>IF(ISBLANK( Cost__c ) || Cost__c=0,  Product2.CostOfGoodsSold__c *  CURRENCYRATE( TEXT(CurrencyIsoCode) ) ,Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Cost of the Price Book entry, or if blank or 0, the cost from Product</inlineHelpText>
    <label>CostCalc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>