force-app/main/default/objects/PricebookEntry/fields/COWO_FrontPurchasePrice__c.field-meta.xml
<CustomField>
    <fullName>COWO_FrontPurchasePrice__c</fullName>
    <label>フロント仕入価格</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>