force-app/main/default/objects/PricebookEntry/fields/COWO_LocalCorporationTC__c.field-meta.xml
<CustomField>
    <fullName>COWO_LocalCorporationTC__c</fullName>
    <label>現法TC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>