force-app/main/default/objects/PricebookEntry/fields/COWO_MC__c.field-meta.xml
<CustomField>
    <fullName>COWO_MC__c</fullName>
    <label>MC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>