force-app/main/default/objects/PricebookEntry/fields/COWO_TC__c.field-meta.xml
<CustomField>
    <fullName>COWO_TC__c</fullName>
    <label>TC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>