force-app/main/default/objects/PricebookEntry/fields/IsUsedByHTE__c.field-meta.xml
<CustomField>
    <fullName>IsUsedByHTE__c</fullName>
    <formula>Product2.IsUsedByHTE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used by HTE from Product</inlineHelpText>
    <label>Used By HTE</label>
    <type>Checkbox</type>
</CustomField>