force-app/main/default/objects/PricebookEntry/fields/PartitionPrice__c.field-meta.xml
<CustomField>
    <fullName>PartitionPrice__c</fullName>
    <label>X</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>