force-app/main/default/objects/PricebookEntry/fields/PartitionPrice_Disp__c.field-meta.xml
<CustomField>
    <fullName>PartitionPrice_Disp__c</fullName>
    <formula>PartitionPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>X_レポート表示</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>