force-app/main/default/objects/PricebookEntry/fields/Pricebook2EntryKey__c.field-meta.xml
<CustomField>
    <fullName>Pricebook2EntryKey__c</fullName>
    <description>パーツNO　と　製品略称を　アンダースコア（ _ ）で繋いだものを外部IDとして格納。</description>
    <externalId>true</externalId>
    <label>価格表エントリ キー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>