force-app/main/default/objects/PricebookEntry/fields/PriceBook_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>PriceBook_ProductCode__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Combination of Pricebook Name and ProductCode with a space in between. Used for upserts.</inlineHelpText>
    <label>PriceBook ProductCode</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>