force-app/main/default/objects/PricebookEntry/fields/ProductCodeAndName__c.field-meta.xml
<CustomField>
    <fullName>ProductCodeAndName__c</fullName>
    <formula>Product2.ProductCode + &quot; &quot; +  Product2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Code plus Product Name</inlineHelpText>
    <label>Product Code and Name</label>
    <type>Text</type>
</CustomField>