force-app/main/default/objects/PricebookEntry/fields/SAWO_FirstHierarchy__c.field-meta.xml
<CustomField>
    <fullName>SAWO_FirstHierarchy__c</fullName>
    <formula>Product2.SAWO_FirstHierarchy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>第一階層</label>
    <type>Text</type>
</CustomField>