force-app/main/default/objects/PricebookEntry/fields/SAWO_SecondHierarchy__c.field-meta.xml
<CustomField>
    <fullName>SAWO_SecondHierarchy__c</fullName>
    <formula>Product2.SAWO_SecondHierarchy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>第二階層</label>
    <type>Text</type>
</CustomField>