force-app/main/default/objects/PricebookEntry/fields/SAWO_ThirdHierarchy__c.field-meta.xml
<CustomField>
    <fullName>SAWO_ThirdHierarchy__c</fullName>
    <formula>Product2.SAWO_ThirdHierarchy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>第三階層</label>
    <type>Text</type>
</CustomField>