force-app/main/default/objects/PricebookEntry/fields/Supplier_Amount__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Amount__c</fullName>
    <label>仕入額</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>