force-app/main/default/objects/PricebookEntry/fields/Teika__c.field-meta.xml
<CustomField>
    <fullName>Teika__c</fullName>
    <label>定価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>