force-app/main/default/objects/PricebookEntry/fields/zTempQuantity__c.field-meta.xml
<CustomField>
    <fullName>zTempQuantity__c</fullName>
    <description>Used as a temporary field to allow users to set the quantity consumed in a datatable in flows, stores no information.</description>
    <inlineHelpText>Used as a temporary field to allow users to set the quantity consumed in a datatable in flows, stores no information.</inlineHelpText>
    <label>zTempQuantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>